k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accommodation-be-service
spec:
  selector:
    app: accommodation-be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
