k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accommodation-be-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: 2306275651-be.hafizmuh.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accommodation-be-service
            port:
              number: 8080
